tests/en/errors/immutable.salam
// EXPECT: E013
func main:
    x i32 = 5
    x = 10
end
